WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285558
Fix flex item positioning in sideways-lr writing mode
https://bugs.webkit.org/show_bug.cgi?id=285558
Summary
Fix flex item positioning in sideways-lr writing mode
Tim Nguyen (:ntim)
Reported
2025-01-07 15:20:21 PST
See "Try it" example on
https://developer.mozilla.org/en-US/docs/Web/CSS/writing-mode
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-07 15:20:30 PST
<
rdar://problem/142507498
>
Tim Nguyen (:ntim)
Comment 2
2025-01-07 16:57:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38687
Tim Nguyen (:ntim)
Comment 3
2025-01-07 17:04:37 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/49966
EWS
Comment 4
2025-01-07 20:11:10 PST
Committed
288579@main
(ecc6a5adf554): <
https://commits.webkit.org/288579@main
> Reviewed commits have been landed. Closing PR #38687 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug