Fix flex item positioning in sideways-lr writing mode https://bugs.webkit.org/show_bug.cgi?id=285558 rdar://142507498

Reviewed by Alan Baradlay.

Use `WritingMode::isLogicalLeftInlineStart()` instead of `WritingMode::isBidiLTR()` to account for sideways-lr writing mode.

Also add a WPT.

* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/reference/sideways-lr-main-axis-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/sideways-lr-main-axis-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/sideways-lr-main-axis.html: Added.
* Source/WebCore/rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::isLeftToRightFlow const):

Canonical link: https://commits.webkit.org/288579@main